Added portfolio page and header styles to other pages

--- a/pieces/Asteroids/asteroids.html
+++ b/pieces/Asteroids/asteroids.html
@@ -12,7 +12,7 @@
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="../../portfolio.html">RYAN BELL</a>
+				<a href="../../index.html">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
@@ -24,10 +24,10 @@
 			</div>
 		</nav>
 		
-		<section id="introduction">
+		<header>
 			<h1>Cellular Asteroids</h1>
 			<p>Processing | 2015</p>
-		</section>
+		</header>
 	
 				<!--[if lt IE 9]>
 			<script type="text/javascript">alert("Your browser does not support the canvas tag.");</script>
