--- a/pieces/Minion/minion.html
+++ b/pieces/Minion/minion.html
@@ -12,7 +12,7 @@
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="../../portfolio.html">RYAN BELL</a>
+				<a href="../../index.html">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
@@ -24,10 +24,10 @@
 			</div>
 		</nav>
 				
-		<section id="introduction">
+		<header>
 			<h1>RIT Minion</h1>
 			<p>Autodesk Maya | 2013</p>
-		</section>
+		</header>
 		<div class="content">
 			<div class="largerow">
 				<img src="Minion4KReference.png"  alt="tpose minion" />
