--- a/pieces/Music/musicvis.html
+++ b/pieces/Music/musicvis.html
@@ -12,7 +12,7 @@
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="../../portfolio.html">RYAN BELL</a>
+				<a href="../../index.html">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
@@ -24,10 +24,10 @@
 			</div>
 		</nav>
 				
-		<section id="introduction">
+		<header>
 			<h1>Music Visualizer</h1>
 			<p>Processing | 2015</p>
-		</section>
+		</header>
 		<div class="content">
 			<div class="largerow">
 				<img src="Capture.PNG"  alt="main title" />
