--- a/pieces/SwitchBlade/switchblade.html
+++ b/pieces/SwitchBlade/switchblade.html
@@ -12,7 +12,7 @@
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="../../portfolio.html">RYAN BELL</a>
+				<a href="../../index.html">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
@@ -24,10 +24,10 @@
 			</div>
 		</nav>
 				
-		<section id="introduction">
+		<header>
 			<h1>SwitchBlade</h1>
 			<p>C# | Monogame | 2015</p>
-		</section>
+		</header>
 		<div class="content">
 			<div class="largerow">
 				<img src="TitleScreen.png"  alt="title screen" />
