--- a/pieces/TSAGame/tsagame.html
+++ b/pieces/TSAGame/tsagame.html
@@ -12,7 +12,7 @@
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="../../portfolio.html">RYAN BELL</a>
+				<a href="../../index.html">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
@@ -24,10 +24,10 @@
 			</div>
 		</nav>
 				
-		<section id="introduction">
+		<header>
 			<h1>Student Technology Association Game Competition</h1>
 			<p>Autodesk Maya | Unity 4 | Adobe Photoshop | 2013</p>
-		</section>
+		</header>
 		<div class="content">
 			<div class="largerow">
 				<img src="ChromeLvl5.jpg" alt="chrome engines" />
