--- a/pieces/HumansVsZombies/hvz.html
+++ b/pieces/HumansVsZombies/hvz.html
@@ -12,7 +12,7 @@
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="../../portfolio.html">RYAN BELL</a>
+				<a href="../../index.html">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
@@ -24,10 +24,10 @@
 			</div>
 		</nav>
 		
-		<section id="introduction">
+		<header>
 			<h1>Something about the projects?</h1>
 			<p>This may not be neccessary</p>
-		</section>
+		</header>
 	
 				<!--[if lt IE 9]>
 			<script type="text/javascript">alert("Your browser does not support the canvas tag.");</script>
