--- a/portfolio.html
+++ b/portfolio.html
@@ -12,11 +12,11 @@
 	<body>
 		<nav>
 			<div id="navName">
-				<a href="#">RYAN BELL</a>
+				<a href="index.html">RYAN BELL</a>
 			</div>
 			<div class="navList">
 				<ul>
-					<li style="	border-bottom: 3px;	border-bottom-style: solid;	border-bottom-color: #fff;"><a class="navLink" href="portfolio.html">Portfolio</a></li>
+					<li  style="	border-bottom: 3px;	border-bottom-style: solid;	border-bottom-color: #fff;"><a class="navLink" ><a class="navLink" href="portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="about.html">About</a></li>
 					<li><a class="navLink" href="media/resume.pdf">R&eacute;sum&eacute;</a></li>
 					<li><a class="navLink" href="notes.html">Notes</a></li> 
@@ -28,50 +28,23 @@
 			<h1>I create visual and interactive applications</h1>
 			<p>Programming | Developing | Modeling</p>
 		</header>
-		<section id="samplework">
-			<div class='sampleItem1'>
-				<a href="pieces/Minion/minion.html">
-					<div class="portfolioPieceInfo"></div>
-				</a>
-			</div>
-			<div class='sampleItem2'>
-				<a href="pieces/TSAGame/tsagame.html">
-					<div class="portfolioPieceInfo"></div>
-				</a>	
-			</div>
-			<div class='sampleItem3'>
-				<a href="pieces/Asteroids/asteroids.html">
-					<div class="portfolioPieceInfo"></div>
-				</a>
-			</div>
-		</section>
-		<section id="links">
-			<div id="linksContainer">
-				<div id="row1">
-					<div id="headshot">
-						<img class="circlePicture" src="media/ProfilePicture.jpg" alt="A picture of me" height="180" width="180">
-					</div>
-					<div id="basicinfo">
-						<h3>HELLO</h3>
-						<p>My name is Ryan Bell and I am currently a dual major at Rochester Institute
-							of Technology in Software Engineering and Game Design and Development. I enjoy
-							programming visual systems and working with complex algorithms. I also have
-							a 3D modeling hobby. 
-						</p>
-					</div>
-				</div>
-			</div>
-		</section>
 		
-		<footer>
-			<div id="socialMedia">
-				<ul>
-					<li><a href="https://github.com/RyanofRIT">Github</a></li>
-					<li><a href="https://bitbucket.org/rjb1928/">Bitbucket</a></li>
-					<li><a href="https://www.linkedin.com/in/ryanbellsoftware">Linkedin</a></li>
-				</ul>
-			</div>
-			<h5>&copy;2015 Ryan Bell. All Rights Reserved.</h5>
-		</footer>
+		<div class="content">
+			<a href="pieces/Asteroids/asteroids.html">
+				<div id="asteroidlink"></div>
+			</a>
+			<a href="pieces/Minion/minion.html">
+				<div id="minionlink"></div>
+			</a>
+			<a href="pieces/TSAGame/tsagame.html">
+				<div id="tsalink"></div>
+			</a>
+			<a href="pieces/SwitchBlade/switchblade.html">
+				<div id="bladelink"></div>
+			</a>
+			<a href="pieces/Music/musicvis.html">
+				<div id="musiclink"></div>
+			</a>	
+		</div>		
 	</body>
 </html>
