SSI for header and footer set up in all files

--- a/pieces/HumansVsZombies/hvz.html
+++ b/pieces/HumansVsZombies/hvz.html
@@ -1,34 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="../../styles/styles.css" />
-		
-		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
-		<title>Ryan Bell</title>	
-	</head>
-	<body>
-		<nav>
-			<div id="navName">
-				<a href="../../index.html">RYAN BELL</a>
-			</div>
-			<div class="navList">
-				<ul>
+<!--#include virtual="../../header.shtml"-->
 					<li><a class="navLink" href="portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="about.html">About</a></li>
 					<li><a class="navLink" href="resume.html">Resume</a></li>
 					<li><a class="navLink" href="content.html">Contact</a></li> 
-				</ul>
-			</div>
-		</nav>
-		
-		<header>
-			<h1>Something about the projects?</h1>
-			<p>This may not be neccessary</p>
-		</header>
-	
+				
 				<!--[if lt IE 9]>
 			<script type="text/javascript">alert("Your browser does not support the canvas tag.");</script>
 		<![endif]-->
@@ -47,5 +22,4 @@
 				<p>JavaScript is required to view the contents of this page.</p>
 			</noscript>
 		</div>
-	</body>
-</html>
+<!--#include virtual="../../footer.shtml"-->			
