--- a/pieces/Minion/minion.html
+++ b/pieces/Minion/minion.html
@@ -1,29 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="../../styles/styles.css" />
-		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
-		<title>Ryan Bell</title>
-	</head>
-	<body>
-		<nav>
-			<div id="navName">
-				<a href="../../index.html">RYAN BELL</a>
-			</div>
-			<div class="navList">
-				<ul>
+<!--#include virtual="../../header.shtml"-->
 					<li><a class="navLink" href="../../portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="../../about.html">About</a></li>
 					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>
 					<li><a class="navLink" href="../../notes.html">Notes</a></li> 
-				</ul>
-			</div>
-		</nav>
-				
+<!-- need to override header with the following -->
+	
 		<header>
 			<h1>RIT Minion</h1>
 			<p>Autodesk Maya | 2013</p>
@@ -54,5 +35,4 @@
 				</h3>	
 			</div>
 		</div>
-	</body>
-</html>
+<!--#include virtual="../../footer.shtml"-->			
