--- a/portfolio.html
+++ b/portfolio.html
@@ -1,34 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="styles/styles.css" />
-		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
-		<title>Ryan Bell</title>
-	</head>
-	<body>
-		<nav>
-			<div id="navName">
-				<a href="index.html">RYAN BELL</a>
-			</div>
-			<div class="navList">
-				<ul>
-					<li  style="	border-bottom: 3px;	border-bottom-style: solid;	border-bottom-color: #fff;"><a class="navLink" ><a class="navLink" href="portfolio.html">Portfolio</a></li>
-					<li><a class="navLink" href="about.html">About</a></li>
-					<li><a class="navLink" href="media/resume.pdf">R&eacute;sum&eacute;</a></li>
-					<li><a class="navLink" href="notes.html">Notes</a></li> 
-				</ul>
-			</div>
-		</nav>
-		
-		<header>
-			<h1>I create visual and interactive applications</h1>
-			<p>Programming | Developing | Modeling</p>
-		</header>
-		
+<!--#include virtual="header.shtml"-->
 		<div class="content">
 			<a href="pieces/Asteroids/asteroids.html">
 				<div id="asteroidlink"></div>
@@ -46,5 +16,4 @@
 				<div id="musiclink"></div>
 			</a>	
 		</div>		
-	</body>
-</html>
+<!--#include virtual="footer.shtml"-->	
