--- a/pieces/Asteroids/asteroids.html
+++ b/pieces/Asteroids/asteroids.html
@@ -1,29 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="../../styles/styles.css" />
-		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
-		<title>Ryan Bell</title>	
-	</head>
-	<body>
-		<nav>
-			<div id="navName">
-				<a href="../../index.html">RYAN BELL</a>
-			</div>
-			<div class="navList">
-				<ul>
+<!--#include virtual="../../header.shtml"-->
 					<li><a class="navLink" href="../../portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="../../about.html">About</a></li>
 					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>
-					<li><a class="navLink" href="../../notes.html">Notes</a></li> 
-				</ul>
-			</div>
-		</nav>
-		
+					<li><a class="navLink" href="../../notes.html">Notes</a></li>
+					 
+		<!--override the header with: -->
 		<header>
 			<h1>Cellular Asteroids</h1>
 			<p>Processing | 2015</p>
@@ -60,5 +41,4 @@
 				</h3>	
 			</div>
 		</div>
-	</body>
-</html>
+<!--#include virtual="../../footer.shtml"-->			
