--- a/pieces/Music/musicvis.html
+++ b/pieces/Music/musicvis.html
@@ -1,33 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="../../styles/styles.css" />
-		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
-		<title>Ryan Bell</title>
-	</head>
-	<body>
-		<nav>
-			<div id="navName">
-				<a href="../../index.html">RYAN BELL</a>
-			</div>
-			<div class="navList">
-				<ul>
+<!--#include virtual="../../header.shtml"-->
 					<li><a class="navLink" href="../../portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="../../about.html">About</a></li>
 					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>
 					<li><a class="navLink" href="../../notes.html">Notes</a></li> 
-				</ul>
-			</div>
-		</nav>
 				
+		<!-- need to override the header with the following -->
 		<header>
 			<h1>Music Visualizer</h1>
 			<p>Processing | 2015</p>
 		</header>
+		
 		<div class="content">
 			<div class="largerow">
 				<img src="Capture.PNG"  alt="main title" />
@@ -71,5 +53,4 @@
 				</h3>	
 			</div>
 		</div>
-	</body>
-</html>
+<!--#include virtual="../../footer.shtml"-->			
