jquery link and style override for html files in sub directories

--- a/about.html
+++ b/about.html
@@ -1,3 +1,9 @@
 <!--#include virtual="header.shtml"-->
-		
+<script>
+	$(function() {
+		$('#aboutLink').css('borderBottom', '3px') ;
+		$('#aboutLink').css('borderBottomStyle', 'solid') ;
+		$('#aboutLink').css('borderBottomColor', '#fff') ;
+	});
+</script>
 <!--#include virtual="footer.shtml"-->	
