--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!--#include virtual="header.shtml"-->
+<script>
+	$(function() {
+		$('#indexLink').css('borderBottom', '3px') ;
+		$('#indexLink').css('borderBottomStyle', 'solid') ;
+		$('#indexLink').css('borderBottomColor', '#fff') ;
+	});
+</script>
+
 		<section id="samplework">
 			<div class='sampleItem1'>
 				<a href="pieces/Minion/minion.html">
@@ -33,13 +41,5 @@
 				</div>
 			</div>
 		</section>
-		
-		<footer>
-			<div id="socialMedia">
-				<ul>
-					<li><a href="https://github.com/RyanofRIT">Github</a></li>
-					<li><a href="https://bitbucket.org/rjb1928/">Bitbucket</a></li>
-					<li><a href="https://www.linkedin.com/in/ryanbellsoftware">Linkedin</a></li>
-				</ul>
-			</div>
+
 <!--#include virtual="footer.shtml"-->			
