--- a/notes.html
+++ b/notes.html
@@ -1,4 +1,12 @@
 <!--#include virtual="header.shtml"-->
+<script>
+	$(function() {
+		$('#notesLink').css('borderBottom', '3px') ;
+		$('#notesLink').css('borderBottomStyle', 'solid') ;
+		$('#notesLink').css('borderBottomColor', '#fff') ;
+	});
+</script>
+
 		<div class="contentsmall">
 			<h3>
 				<!--
