--- a/pieces/TSAGame/tsagame.html
+++ b/pieces/TSAGame/tsagame.html
@@ -1,4 +1,12 @@
 <!--#include virtual="../../header.shtml"-->
+<script>
+	$(function() {
+		$('#portfolioLink').css('borderBottom', '3px') ;
+		$('#portfolioLink').css('borderBottomStyle', 'solid') ;
+		$('#portfolioLink').css('borderBottomColor', '#fff') ;
+		
+	});
+</script>
 					<li><a class="navLink" href="../../portfolio.html">Portfolio</a></li>
 					<li><a class="navLink" href="../../about.html">About</a></li>
 					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>
