--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,21 @@
 <!--#include virtual="header.shtml"-->
+
+<script>
+	document.onload = function(e){
+		document.getElementById("#portfolioLink").style.borderBottom = "border-bottom: 3px";
+		document.getElementById("#portfolioLink").style.borderBottomStyle = "border-bottom-style: solid";
+		document.getElementById("#portfolioLink").style.borderBottomColor = "border-bottom-color: #fff";
+		console.log("here");
+	}	
+	$(function() {
+    	console.log( "ready!" );
+		$('#portfolioLink').css('borderBottom', '3px') ;
+		$('#portfolioLink').css('borderBottomStyle', 'solid') ;
+		$('#portfolioLink').css('borderBottomColor', '#fff') ;
+		console.log("here");
+	});
+</script>
+
 		<div class="content">
 			<a href="pieces/Asteroids/asteroids.html">
 				<div id="asteroidlink"></div>
