Stylesheet link fixed for sub files

--- a/pieces/TSAGame/tsagame.html
+++ b/pieces/TSAGame/tsagame.html
@@ -5,12 +5,14 @@
 		$('#portfolioLink').css('borderBottomStyle', 'solid') ;
 		$('#portfolioLink').css('borderBottomColor', '#fff') ;
 		
+		$('#aportfolio').css('href', '../../portfolio.html') ;
+		$('#aabout').css('href', '../../about.html') ;
+		$('#aresume').css('href', '../../media/resume.pdf') ;
+		$('#anotes').css('href', '../../notes.html') ;
+		
 	});
 </script>
-					<li><a class="navLink" href="../../portfolio.html">Portfolio</a></li>
-					<li><a class="navLink" href="../../about.html">About</a></li>
-					<li><a class="navLink" href="../../media/resume.pdf">R&eacute;sum&eacute;</a></li>
-					<li><a class="navLink" href="../../notes.html">Notes</a></li> 
+ 
 <!-- need to override the header with the following -->
 		<header>
 			<h1>Student Technology Association Game Competition</h1>
