Header DHTML in JQuery

--- a/pieces/Asteroids/asteroids.html
+++ b/pieces/Asteroids/asteroids.html
@@ -10,14 +10,9 @@
 		$('#aresume').css('href', '../../media/resume.pdf') ;
 		$('#anotes').css('href', '../../notes.html') ;
 		
+		$("header").html("<h1>Cellular Asteroids</h1><p>Processing | 2015</p>");
 	});
 </script>
-					 
-		<!--override the header with: -->
-		<header>
-			<h1>Cellular Asteroids</h1>
-			<p>Processing | 2015</p>
-		</header>
 	
 				<!--[if lt IE 9]>
 			<script type="text/javascript">alert("Your browser does not support the canvas tag.");</script>
