--- a/pieces/Minion/minion.html
+++ b/pieces/Minion/minion.html
@@ -10,14 +10,11 @@
 		$('#aresume').css('href', '../../media/resume.pdf') ;
 		$('#anotes').css('href', '../../notes.html') ;
 		
+		$("header").html("<h1>RIT Minion</h1><p>Autodesk Maya | 2013</p>");
 	});
 </script>
 <!-- need to override header with the following -->
-	
-		<header>
-			<h1>RIT Minion</h1>
-			<p>Autodesk Maya | 2013</p>
-		</header>
+
 		<div class="content">
 			<div class="largerow">
 				<img src="Minion4KReference.png"  alt="tpose minion" />
