--- a/pieces/Music/musicvis.html
+++ b/pieces/Music/musicvis.html
@@ -10,14 +10,9 @@
 		$('#aresume').css('href', '../../media/resume.pdf') ;
 		$('#anotes').css('href', '../../notes.html') ;
 		
+		$("header").html("<h1>Music Visualizer</h1><p>Processing | 2015</p>");
 	});
 </script>
-				
-		<!-- need to override the header with the following -->
-		<header>
-			<h1>Music Visualizer</h1>
-			<p>Processing | 2015</p>
-		</header>
 		
 		<div class="content">
 			<div class="largerow">
