--- a/pieces/SwitchBlade/switchblade.html
+++ b/pieces/SwitchBlade/switchblade.html
@@ -10,6 +10,7 @@
 		$('#aresume').css('href', '../../media/resume.pdf') ;
 		$('#anotes').css('href', '../../notes.html') ;
 		
+		$("header").html("<h1>SwitchBlade</h1><p>C# | Monogame | 2015</p>");
 	});
 </script>
 <!--need to override the header with the following -->
