--- a/pieces/TSAGame/tsagame.html
+++ b/pieces/TSAGame/tsagame.html
@@ -10,6 +10,7 @@
 		$('#aresume').css('href', '../../media/resume.pdf') ;
 		$('#anotes').css('href', '../../notes.html') ;
 		
+		$("header").html("<h1>Student Technology Association Game Competition</h1><p>Autodesk Maya | Unity 4 | Adobe Photoshop | 2013</p>");
 	});
 </script>
  
