fixed link overrides

--- a/pieces/Minion/minion.html
+++ b/pieces/Minion/minion.html
@@ -5,10 +5,10 @@
 		$('#portfolioLink').css('borderBottomStyle', 'solid') ;
 		$('#portfolioLink').css('borderBottomColor', '#fff') ;
 		
-		$('#aportfolio').css('href', '../../portfolio.html') ;
-		$('#aabout').css('href', '../../about.html') ;
-		$('#aresume').css('href', '../../media/resume.pdf') ;
-		$('#anotes').css('href', '../../notes.html') ;
+		$('#aportfolio').attr('href', '../../portfolio.html') ;
+		$('#aabout').attr('href', '../../about.html') ;
+		$('#aresume').attr('href', '../../media/resume.pdf') ;
+		$('#anotes').attr('href', '../../notes.html') ;
 		
 		$("header").html("<h1>RIT Minion</h1><p>Autodesk Maya | 2013</p>");
 	});
