--- a/pieces/TSAGame/tsagame.html
+++ b/pieces/TSAGame/tsagame.html
@@ -5,10 +5,10 @@
 		$('#portfolioLink').css('borderBottomStyle', 'solid') ;
 		$('#portfolioLink').css('borderBottomColor', '#fff') ;
 		
-		$('#aportfolio').css('href', '../../portfolio.html') ;
-		$('#aabout').css('href', '../../about.html') ;
-		$('#aresume').css('href', '../../media/resume.pdf') ;
-		$('#anotes').css('href', '../../notes.html') ;
+		$('#aportfolio').attr('href', '../../portfolio.html') ;
+		$('#aabout').attr('href', '../../about.html') ;
+		$('#aresume').attr('href', '../../media/resume.pdf') ;
+		$('#anotes').attr('href', '../../notes.html') ;
 		
 		$("header").html("<h1>Student Technology Association Game Competition</h1><p>Autodesk Maya | Unity 4 | Adobe Photoshop | 2013</p>");
 	});
