--- a/about.html
+++ b/about.html
@@ -1,9 +1,11 @@
 <!--#include virtual="header.shtml"-->
 <script>
+	//make a solid white line under about tab in nav so users know where they are
 	$(function() {
 		$('#aboutLink').css('borderBottom', '3px') ;
 		$('#aboutLink').css('borderBottomStyle', 'solid') ;
 		$('#aboutLink').css('borderBottomColor', '#fff') ;
 	});
 </script>
+
 <!--#include virtual="footer.shtml"-->	
