--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!--#include virtual="header.shtml"-->
 <script>
+	//make a white line under the home link to show users where they are 
 	$(function() {
 		$('#indexLink').css('borderBottom', '3px') ;
 		$('#indexLink').css('borderBottomStyle', 'solid') ;
