--- a/notes.html
+++ b/notes.html
@@ -1,5 +1,6 @@
 <!--#include virtual="header.shtml"-->
 <script>
+	//make a white line under the notes link to show users where they are
 	$(function() {
 		$('#notesLink').css('borderBottom', '3px') ;
 		$('#notesLink').css('borderBottomStyle', 'solid') ;
@@ -31,7 +32,7 @@
 				hover and making a bottom border for the page that is currently being viewed<br />
 				-Tags were changed from divs with ids to header, nav etc. <br />
 				-Header height was reduced to make it not waste as much space (CRAP principles)<br />
-				- 
+				-Content was added especially in the about.html which was previously empty<br />
 			</h3>
 		</div>
 <!--#include virtual="footer.shtml"-->	
