--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,7 @@
 <!--#include virtual="header.shtml"-->
 
 <script>
+	//make a white line under the portfolio link to show users where they are
 	$(function() {
 		$('#portfolioLink').css('borderBottom', '3px') ;
 		$('#portfolioLink').css('borderBottomStyle', 'solid') ;
