--- a/pieces/Minion/minion.html
+++ b/pieces/Minion/minion.html
@@ -1,15 +1,18 @@
 <!--#include virtual="../../header.shtml"-->
 <script>
 	$(function() {
+		//make a solid white line under the portfolio link so users know where they are
 		$('#portfolioLink').css('borderBottom', '3px') ;
 		$('#portfolioLink').css('borderBottomStyle', 'solid') ;
 		$('#portfolioLink').css('borderBottomColor', '#fff') ;
 		
+		//override the links so they point to the correct location
 		$('#aportfolio').attr('href', '../../portfolio.html') ;
 		$('#aabout').attr('href', '../../about.html') ;
 		$('#aresume').attr('href', '../../media/resume.pdf') ;
 		$('#anotes').attr('href', '../../notes.html') ;
 		
+		//override the catchphrase header to include project specfic detail
 		$("header").html("<h1>RIT Minion</h1><p>Autodesk Maya | 2013</p>");
 	});
 </script>
