move towards DHTML

--- a/pieces/Minion/minion.html
+++ b/pieces/Minion/minion.html
@@ -18,7 +18,7 @@
 </script>
 <!-- need to override header with the following -->
 
-		<div class="content">
+		<main>
 			<div class="largerow">
 				<img src="Minion4KReference.png"  alt="tpose minion" />
 				<h3>I made this minion at the end of my Senior year of high school with Autodesk
@@ -43,5 +43,5 @@
 					coffee mug that I own.  
 				</h3>	
 			</div>
-		</div>
+		</main>
 <!--#include virtual="../../footer.shtml"-->			
