--- a/pieces/SwitchBlade/switchblade.html
+++ b/pieces/SwitchBlade/switchblade.html
@@ -22,7 +22,7 @@
 			<p>C# | Monogame | 2015</p>
 		</header>
 		
-		<div class="content">
+		<main>
 			<div class="largerow">
 				<img src="TitleScreen.png"  alt="title screen" />
 				<h3>I created this game with <a href="https://www.linkedin.com/in/thenelsonscott">Nelson Scott</a>,
@@ -47,5 +47,5 @@
 					boxes was also done on startup through code. 
 				</h3>
 			</div>
-		</div>
+		</main>
 <!--#include virtual="../../footer.shtml"-->	
