--- a/pieces/TSAGame/tsagame.html
+++ b/pieces/TSAGame/tsagame.html
@@ -23,7 +23,7 @@
 			<p>Autodesk Maya | Unity 4 | Adobe Photoshop | 2013</p>
 		</header>
 		
-		<div class="content">
+		<main>
 			<div class="largerow">
 				<img src="ChromeLvl5.jpg" alt="chrome engines" />
 				<h3>This is a stylized render of the fifth level of a game that I made with a couple
@@ -37,5 +37,5 @@
 					my hard drive crashed. 
 				</h3>	
 			</div>
-		</div>
+		</main>
 <!--#include virtual="../../footer.shtml"-->	
