--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 	});
 </script>
 
-		<div class="content">
+		<div class="main">
 			<a href="pieces/Asteroids/asteroids.html">
 				<div id="asteroidlink"></div>
 			</a>
