--- a/about.html
+++ b/about.html
@@ -7,5 +7,9 @@
 		$('#aboutLink').css('borderBottomColor', '#fff') ;
 	});
 </script>
-
+	<main>
+		<p>
+			
+		</p>
+	</main>
 <!--#include virtual="footer.shtml"-->	
