--- a/notes.html
+++ b/notes.html
@@ -30,7 +30,7 @@
 				-The copyright at the bottom of the page was changed from 2016 to 2015<br />
 				-Navigation not intuitive issue was fixed by making the links highlight on 
 				hover and making a bottom border for the page that is currently being viewed<br />
-				-Tags were changed from divs with ids to header, nav etc. <br />
+				-Tags were changed from divs with ids to header, main etc. <br />
 				-Header height was reduced to make it not waste as much space (CRAP principles)<br />
 				-Content was added especially in the about.html which was previously empty<br />
 			</h3>
