--- a/pieces/Asteroids/asteroids.html
+++ b/pieces/Asteroids/asteroids.html
@@ -1,15 +1,18 @@
 <!--#include virtual="../../header.shtml"-->
 <script>
 	$(function() {
+		//make a solid white line under the portfolio link so users know where they are
 		$('#portfolioLink').css('borderBottom', '3px') ;
 		$('#portfolioLink').css('borderBottomStyle', 'solid') ;
 		$('#portfolioLink').css('borderBottomColor', '#fff') ;
 		
+		//override the links so they point to the correct location
 		$('#aportfolio').attr('href', '../../portfolio.html') ;
 		$('#aabout').attr('href', '../../about.html') ;
 		$('#aresume').attr('href', '../../media/resume.pdf') ;
 		$('#anotes').attr('href', '../../notes.html') ;
 		
+		//override the catchphrase header to include project specfic detail
 		$("header").html("<h1>Cellular Asteroids</h1><p>Processing | 2015</p>");
 	});
 </script>
@@ -32,7 +35,7 @@
 				<p>JavaScript is required to view the contents of this page.</p>
 			</noscript>
 		</div>
-		<div class="content">
+		<main>
 			<div class="largerow">
 				<img src="asteroidCapture.png"  alt="Asteroids game" />
 				<h3>
@@ -44,5 +47,5 @@
 					points with perlin noise and drawing a curved line through these points.  
 				</h3>	
 			</div>
-		</div>
+		</main>
 <!--#include virtual="../../footer.shtml"-->			
