--- a/pieces/Music/musicvis.html
+++ b/pieces/Music/musicvis.html
@@ -17,7 +17,7 @@
 	});
 </script>
 		
-		<div class="content">
+		<main>
 			<div class="largerow">
 				<img src="Capture.PNG"  alt="main title" />
 				<h3>This is  a music visualizer that I made in Processing. It 
@@ -59,5 +59,5 @@
 					and duration are shown.
 				</h3>	
 			</div>
-		</div>
+		</main>
 <!--#include virtual="../../footer.shtml"-->			
