fixed main and double header

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 	});
 </script>
 
-		<div class="main">
+		<main>
 			<a href="pieces/Asteroids/asteroids.html">
 				<div id="asteroidlink"></div>
 			</a>
@@ -25,5 +25,5 @@
 			<a href="pieces/Music/musicvis.html">
 				<div id="musiclink"></div>
 			</a>	
-		</div>		
+		</main>		
 <!--#include virtual="footer.shtml"-->	
