404 errors for music fixed and another double header issue

--- a/pieces/Music/musicvis.html
+++ b/pieces/Music/musicvis.html
@@ -19,7 +19,7 @@
 		
 		<main>
 			<div class="largerow">
-				<img src="Capture.PNG"  alt="main title" />
+				<img src="Capture.png"  alt="main title" />
 				<h3>This is  a music visualizer that I made in Processing. It 
 					starts out by showing the title coming into focus with the 
 					use of Guassian blur. The title can be changed in the code 
@@ -29,14 +29,14 @@
 				</h3>	
 			</div>
 			<div class="largerow">
-				<img src="Capture4.PNG"   alt="title exploded" />
+				<img src="Capture4.png"   alt="title exploded" />
 				<h3>The dots also have physics functions which allow forces
 					to be applied to them. Using these functions, the title
 					is disintegrated and the main visualizer is faded in. 
 				</h3>	
 			</div>
 			<div class="largerow">
-				<img src="Capture2.PNG"   alt="waveforms" />
+				<img src="Capture2.png"   alt="waveforms" />
 				<h3>The main music visualizer shows the waveform for the song
 					at the top and the bottom as well as a large, stationary
 					dot in the middle which pulsates based on the minim beat
@@ -44,7 +44,7 @@
 				</h3>	
 			</div>
 			<div class="largerow">
-				<img src="Capture3.PNG"  alt="spectrograph" />
+				<img src="Capture3.png"  alt="spectrograph" />
 				<h3>A spectrograph is also shown on the right and dots
 					move from right to left in the background at different
 					rates to give an illusion of movement. The dots differing
@@ -53,7 +53,7 @@
 				</h3>	
 			</div>
 			<div class="largerow">
-				<img src="Capture5.PNG"   alt="id3 tags" />
+				<img src="Capture5.png"   alt="id3 tags" />
 				<h3>At the end of the song, the ID3 tags are pulled and 
 					information such as the song title, author, album
 					and duration are shown.
