fixed formatting on DHTML page

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,20 +10,21 @@
 </script>
 
 		<main>
+			<a href="pieces/projects.html" style="color:black;"><h3>Click here for alternate view</h3></a>
 			<a href="pieces/Asteroids/asteroids.html">
-				<div id="asteroidlink"></div>
+				<div id="asteroidlink" style="width:300px; height:300px;"></div>
 			</a>
 			<a href="pieces/Minion/minion.html">
-				<div id="minionlink"></div>
+				<div id="minionlink" style="width:300px; height:300px;"></div>
 			</a>
 			<a href="pieces/TSAGame/tsagame.html">
-				<div id="tsalink"></div>
+				<div id="tsalink" style="width:300px; height:300px;"></div>
 			</a>
 			<a href="pieces/SwitchBlade/switchblade.html">
-				<div id="bladelink"></div>
+				<div id="bladelink" style="width:300px; height:300px;"></div>
 			</a>
 			<a href="pieces/Music/musicvis.html">
-				<div id="musiclink"></div>
+				<div id="musiclink" style="width:300px; height:300px;"></div>
 			</a>	
 		</main>		
 <!--#include virtual="footer.shtml"-->	
