image gallery added

--- a/notes.html
+++ b/notes.html
@@ -9,30 +9,29 @@
 </script>
 
 		<div class="contentsmall">
-			<h3>
-				<!--
-				All of the html and css code in this project is mine. The design is
-				influenced by a number of similar portfolio sites that I thought 
-				looked good (although my site didn't turn out nearly as good as any
-				of them). All pictures as also mine. The largest problem I faced was
-				finding the time to do this project. The second was determining what
-				layout I should go with for the site. The third was getting the site
-				to stay responsive at different screen sizes. The first two can't 
-				really be improved on or avoided that easily. The third will become
-				easier the more that I work with web development. Just doing this 
-				project has helped me learn how sites should be set up and organized
-				on a more basic level so that making it responsive is easier.<br />
-				For above and beyond, I put my version of the game Asteroids in the 
-				site with javascript. -->
-				Fixes from Project 2:<br />
-				-The link on my 230 main page is fixed to actually point to the project
-				now<br />
-				-The copyright at the bottom of the page was changed from 2016 to 2015<br />
-				-Navigation not intuitive issue was fixed by making the links highlight on 
-				hover and making a bottom border for the page that is currently being viewed<br />
-				-Tags were changed from divs with ids to header, main etc. <br />
-				-Header height was reduced to make it not waste as much space (CRAP principles)<br />
-				-Content was added especially in the about.html which was previously empty<br />
-			</h3>
+			<h3>Fixes from Project 2:</h3>
+			<ul> 
+				<li>The link on my 230 main page is fixed to actually point to the project
+				now</li>
+				<li>The copyright at the bottom of the page was changed from 2016 to 2015</li>
+				<li>Navigation not intuitive issue was fixed by making the links highlight on 
+				hover and making a bottom border for the page that is currently being viewed</li>
+				<li>Tags were changed from divs with ids to header, main etc. </li>
+				<li>Header height was reduced to make it not waste as much space (CRAP principles)</li>
+				<li>Content was added especially in the about.html which was previously empty</li>
+			</ul>
+			<h3>Added for this revision</h3>
+			<ul>
+				<li>DHTML example version of my projects page which can be found by following the link
+					in portfolio.html. This DHTML example uses JQuery fadeIns and fadeOuts as transitions. 
+				</li>
+				<li>An image gallery can be found <a style="color:#ccc;" href="imagegallery.html">here</a></li>
+				<li>SSI is used for the header and footer on each page and jquery is used to adjust the 
+					header and nav links on most inheriting pages</li>
+				<li>SSI command in the footer to display date</li>
+				<li>custom 404 page created<li>
+				<li>password protected page at </li>	
+				
+			</ul>
 		</div>
 <!--#include virtual="footer.shtml"-->	
