fixed links for projects page

--- a/notes.html
+++ b/notes.html
@@ -29,7 +29,7 @@
 				<li>SSI is used for the header and footer on each page and jquery is used to adjust the 
 					header and nav links on most inheriting pages</li>
 				<li>SSI command in the footer to display date</li>
-				<li>custom 404 page created<li>
+				<li>custom 404 page created</li>
 				<li>password protected page at </li>	
 				
 			</ul>
