--- a/pieces/projects.html
+++ b/pieces/projects.html
@@ -7,10 +7,10 @@
 		$('#portfolioLink').css('borderBottomColor', '#fff') ;
 		
 		//override the links so they point to the correct location
-		$('#aportfolio').attr('href', '../../portfolio.html') ;
-		$('#aabout').attr('href', '../../about.html') ;
-		$('#aresume').attr('href', '../../media/resume.pdf') ;
-		$('#anotes').attr('href', '../../notes.html') ;
+		$('#aportfolio').attr('href', '../portfolio.html') ;
+		$('#aabout').attr('href', '../about.html') ;
+		$('#aresume').attr('href', '../media/resume.pdf') ;
+		$('#anotes').attr('href', '../notes.html') ;
 		
 		asteroidHeader();
 		
