Finishing touches to responsive design

--- a/notes.html
+++ b/notes.html
@@ -30,8 +30,13 @@
 					header and nav links on most inheriting pages</li>
 				<li>SSI command in the footer to display date</li>
 				<li>custom 404 page created</li>
-				<li>password protected page at </li>	
-				
+				<li>password protected page at <a href="https://people.rit.edu/rjb1928/230/portfolio/auth/myPage.html" style="color:#ccc;">this location</a>.
+					Note that access will be forbidden if it is accessed without a secure connection.</li>	
+			</ul>
+			<h3>Extra</h3>
+			<ul>
+				<li>My website includes a game of asteroids that I coded my self in processing and javascript</li>
+				<li>I also use a favicon on the main page of my site</li>
 			</ul>
 		</div>
 <!--#include virtual="footer.shtml"-->	
