Change stylesheet link from absolute to relative

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<!-- import JQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<!-- import personal CSS -->
-		<link rel="stylesheet" type="text/css" href="http://people.rit.edu/rjb1928/230/portfolio/styles/styles.css" />
+		<link rel="stylesheet" type="text/css" href="./styles.css" />
 		<!-- add my logo to the tab -->
 		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
 		<!-- The name that will appear in the tab -->
