HTML navigation structure

--- a/index.html
+++ b/index.html
@@ -16,20 +16,24 @@
 		<title>Ryan Bell</title>
 	</head>
 	<body>
-		<nav>
-			<div id="navName">
-				<!-- static link to the homepage -->
-				<a id="indexlink" class="navLink" href="http://people.rit.edu/rjb1928/230/portfolio/">RYAN BELL</a>
-			</div>
-			<!-- navigation links -->
-			<div class="navList">
-				<ul>
-					<li id="aboutLink"><a id="aabout" class="navLink" href="about.html">About</a></li>
-					<li><a class="navLink" id="aresume" href="media/resume.pdf">Resume</a></li>
-				</ul>
-			</div>
-		</nav>
-		<main>
+        <header id="header" style="top: 0px;">
+            <div id="logo" data-content-field="site-title">
+                <h1><a href="#">Ryan Bell</a></h1>
+            </div>
+            <div id="topNav" data-content-field="navigation">
+                <nav class="main-nav">
+                    <ul>
+                        <li class="page-collection">
+                                <a href="/#/">About</a>
+                        </li>
+                        <li class="page-collection">          
+                                <a href="/#/">Resume</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    	<main>
             <div id = "projectThumbs">
                 <div class = "wrapper">
                     <!-- Project 1 -->
@@ -38,7 +42,7 @@
                             <div class = "project-image">
                                 <div class = "intrinsic">
                                     <div class = "content-fill">
-                                        <img class = "" src = "">
+                                        
                                     </div>
                                 </div>
                             </div>
