--- a/index.html
+++ b/index.html
@@ -133,6 +133,20 @@
                             <div class = "project-title">Sample Title</div>
                         </div>
                     </a>
+                    
+                    <!-- Project 8 -->
+                    <a class = "project" href = "/#">
+                        <div>
+                            <div class = "project-image">
+                                <div class = "intrinsic">
+                                    <div class = "content-fill">
+                                        <img class = "" src = "">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class = "project-title">Sample Title</div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </main>
