--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <nav class="main-nav">
                     <ul>
                         <li class="page-collection">
-                                <a href="/#/">About</a>
+                                <a href="/#/"><b>About</b></a>
                         </li>
                         <li class="page-collection">          
-                                <a href="/#/">Resume</a>
+                                <a href="/#/"><b>Resume</b></a>
                         </li>
                     </ul>
                 </nav>
@@ -42,7 +42,7 @@
                             <div class = "project-image">
                                 <div class = "intrinsic">
                                     <div class = "content-fill">
-                                        
+                                        <img src = "comedy.jpg" class="">
                                     </div>
                                 </div>
                             </div>
