made links relative

--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@
                 <nav class="main-nav">
                     <ul>
                         <li class="page-collection">
-                                <a href="/about.html"><b>About</b></a>
+                                <a href="./about.html"><b>About</b></a>
                         </li>
                         <li class="page-collection">          
-                                <a href="/resume.pdf"><b>Resume</b></a>
+                                <a href="./resume.pdf"><b>Resume</b></a>
                         </li>
                     </ul>
                 </nav>
