Remove testing image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <div class = "project-image">
                                 <div class = "intrinsic">
                                     <div class = "content-fill">
-                                        <img src = "comedy.jpg" class="">
+                                        <img src = "">
                                     </div>
                                 </div>
                             </div>
