Added project description for the Minion page

--- a/minion.html
+++ b/minion.html
@@ -34,6 +34,13 @@
             </div>
         </header>
     	<main>
+            <div class = "project-description">
+                <p>I modeled, textured, and rigged this minion at the end of my Senior year of High School
+                     with Maya, Photoshop, and MentalRay. I then made a coffee mug for the minion that
+                      matched the one I own.
+                </p>
+            </div>
+            
     	</main>
 	</body>
 </html>
