add image container divs and links to minion html file

--- a/minion.html
+++ b/minion.html
@@ -40,7 +40,20 @@
                       matched the one I own.
                 </p>
             </div>
-            
+            <div class = "image-list">
+                <div class = "image">
+                    <img src = "minionfront.png">
+                </div>
+                <div class = "image">
+                    <img src = "finalshading.png">
+                </div>
+                <div class = "image">
+                    <img src = "rig.png">
+                </div>
+                <div class = "image">
+                    <img src = "mug.png">
+                </div>
+            </div>
     	</main>
 	</body>
 </html>
