fixed image links

--- a/minion.html
+++ b/minion.html
@@ -42,16 +42,16 @@
             </div>
             <div class = "image-list">
                 <div class = "image">
-                    <img src = "minionfront.png">
+                    <img src = "./media/minionfront.png">
                 </div>
                 <div class = "image">
-                    <img src = "finalshading.png">
+                    <img src = "./media/finalshading.png">
                 </div>
                 <div class = "image">
-                    <img src = "rig.png">
+                    <img src = "./media/rig.png">
                 </div>
                 <div class = "image">
-                    <img src = "mug.png">
+                    <img src = "./media/mug.png">
                 </div>
             </div>
     	</main>
