project page css for basic layout (missing responsive)

--- a/minion.html
+++ b/minion.html
@@ -34,24 +34,29 @@
             </div>
         </header>
     	<main>
-            <div class = "project-description">
-                <p>I modeled, textured, and rigged this minion at the end of my Senior year of High School
-                     with Maya, Photoshop, and MentalRay. I then made a coffee mug for the minion that
-                      matched the one I own.
-                </p>
-            </div>
-            <div class = "image-list">
-                <div class = "image">
-                    <img src = "./media/minionfront.png">
+            <div class = "project">
+                <div class = "project-meta">
+                    <h2>Minion</h2>
+                    <div class = "project-description">
+                        <p>I modeled, textured, and rigged this minion at the end of my Senior year of High School
+                            with Maya, Photoshop, and MentalRay. I then made a coffee mug for the minion that
+                            matched the one I own.
+                        </p>
+                    </div>
                 </div>
-                <div class = "image">
-                    <img src = "./media/finalshading.png">
-                </div>
-                <div class = "image">
-                    <img src = "./media/rig.png">
-                </div>
-                <div class = "image">
-                    <img src = "./media/mug.png">
+                <div class = "image-list">
+                    <div class = "image">
+                        <img src = "./media/minionfront.png">
+                    </div>
+                    <div class = "image">
+                        <img src = "./media/finalshading.png">
+                    </div>
+                    <div class = "image">
+                        <img src = "./media/rig.png">
+                    </div>
+                    <div class = "image">
+                        <img src = "./media/mug.png">
+                    </div>
                 </div>
             </div>
     	</main>
