links  back to homepage

--- a/minion.html
+++ b/minion.html
@@ -18,7 +18,7 @@
 	<body>
         <header id="header" style="top: 0px;">
             <div id="logo" data-content-field="site-title">
-                <h1><a href="#">Ryan Bell</a></h1>
+                <h1><a href="./index.html">Ryan Bell</a></h1>
             </div>
             <div id="topNav" data-content-field="navigation">
                 <nav class="main-nav">
@@ -34,7 +34,7 @@
             </div>
         </header>
     	<main>
-            <div class = "project">
+            <div class = "project-page">
                 <div class = "project-meta">
                     <h2>Minion</h2>
                     <div class = "project-description">
@@ -59,6 +59,7 @@
                     </div>
                 </div>
             </div>
+            
     	</main>
 	</body>
 </html>
