--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<body>
         <header id="header" style="top: 0px;">
             <div id="logo" data-content-field="site-title">
-                <h1><a href="#">Ryan Bell</a></h1>
+                <h1><a href="./index.html">Ryan Bell</a></h1>
             </div>
             <div id="topNav" data-content-field="navigation">
                 <nav class="main-nav">
