minion project thumbnail

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div class = "project-image">
                                 <div class = "intrinsic">
                                     <div class = "content-fill">
-                                        <img class = "" src = "">
+                                        <img class = "" src = "./media/minionfront.png">
                                     </div>
                                 </div>
                             </div>
@@ -74,7 +74,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class = "project-title">SwwitchBlade</div>
+                            <div class = "project-title">SwitchBlade</div>
                         </div>
                     </a>
                     
