added switchblade image list and title

--- a/switchblade.html
+++ b/switchblade.html
@@ -34,6 +34,27 @@
             </div>
         </header>
     	<main>
+            <div class = "project-page">
+                <div class = "project-meta">
+                    <h2>SwitchBlade</h2>
+                    <div class = "project-description">
+                        <p>
+                        </p>
+                    </div>
+                </div>
+                <div class = "image-list">
+                    <div class = "image">
+                        <img src = "./media/sbtitlescreen.png">
+                    </div>
+                    <div class = "image">
+                        <img src = "./media/sbloadingscreen.jpg">
+                    </div>
+                    <div class = "image">
+                        <img src = "./media/sbgame.png">
+                    </div>
+                </div>
+            </div>
+            
     	</main>
 	</body>
 </html>
