SB project description

--- a/switchblade.html
+++ b/switchblade.html
@@ -38,7 +38,12 @@
                 <div class = "project-meta">
                     <h2>SwitchBlade</h2>
                     <div class = "project-description">
-                        <p>
+                        <p>I created this game alongside Nelson Scott, Daniel Hawk, and 
+                            Peter Lockhart during my Freshman year at RIT. The gameplay 
+                            consisted of following a sword as it changed hands during battle. 
+                            It was made with C# and featured a custom character creation tool,
+                            four character special abilities, and a procedurally generated map 
+                            and path that used a custom implementation of Perlin noise.  
                         </p>
                     </div>
                 </div>
