--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <div class = "project-image">
                                 <div class = "intrinsic">
                                     <div class = "content-fill">
-                                        <img class = "" src = "">
+                                        <img class = "" src = "./media/sbthumb.png">
                                     </div>
                                 </div>
                             </div>
